fix: Adjust padding for about hero section for improved layout on mobile

--- a/css/blogs.css
+++ b/css/blogs.css
@@ -573,12 +573,8 @@
 
 @media (max-width: 900px) {
   .about-hero {
-    padding-top: 30px !important;
-    padding-bottom: 30px !important;
+    padding-top: 1px !important;
+    padding-bottom: 90px !important;
     min-height: 0 !important;
-  }
-  .hero-text-center {
-    margin-top: 0 !important;
-    padding-bottom: 30px !important;
   }
 }
